--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,6 @@
 	<name>Inventory Manager</name>
 
 	<dependencies>
-	<!--
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-controls</artifactId>
-			<version>21.0.5</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjfx</groupId>
-			<artifactId>javafx-fxml</artifactId>
-			<version>21.0.5</version>
-		</dependency
-		-->
-		
 		<!-- Javalin, SQLite, JUnit, Mockito, and loggers -->
 		<dependency>
 			<groupId>org.xerial</groupId>
@@ -66,15 +53,7 @@
 					<target>21</target>
 				</configuration>
 			</plugin>
-			<!--
-			<plugin>
-				<groupId>org.openjfx</groupId>
-				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.4</version>
-				<configuration>
-					<mainClass>com.networkroom.main.Main</mainClass>
-				</configuration>
-			</plugin>
+			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
@@ -89,14 +68,13 @@
 							<transformers>
 								<transformer
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-									<mainClass>main.Main</mainClass>
+									<mainClass>bootstrap.Main</mainClass>
 								</transformer>
 							</transformers>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
-			-->
 		</plugins>
 	</build>
 
