Refactor: migrate to hexagonal architecture with CQRS
[Architecture & CQRS]
- Move repositories to ports/adapters pattern (CategoryRepository -> ports, implementation -> adapters/out)
- Implement CQRS for use cases with Command/Query interfaces
- Rename use case methods to handle() following CQRS conventions

[Exceptions & Logging]
- Standardize exception handling using common kernel exceptions
- Remove duplicated exception classes
- Consolidate utility classes and logging

[Package & DB Refactor]
- Reorganize package structure (kernel -> common.kernel, infra -> common.platform)
- Update database configuration for dependency injection
- Remove obsolete Javalin components
- Clean up integration tests for removed SQLite repository

[Dependency Injection / Bootstrapping]
- Added JavalinContext singleton for registry access with lazy loading
- Created ExceptionRegistry to centralize API exceptions
- Created RepositoryRegistry to register repositories annotated with JavalinRepositoryAnnotation
- Created DependencyRegistry and DependencyResolver for constructor injection
- Created UseCaseRegistry to centralize and register all use cases with Javalin annotations
- Created BusRegistry for registering command/query buses and injecting maps
- Created EndpointRegistry to register endpoints and inject Javalin app, command/query buses

[Breaking Changes]
- CategoryRepository moved from domain/repository to domain/ports
- Use case methods renamed to handle()
- Exception classes relocated to common.kernel.exceptions.api
- Database initialization now requires HikariSqlite instance

--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,13 @@ dependency-reduced-pom.xml
 target/
 
 # ignore database files
-*db/
+/db/
 *.db*
 
 # Ignore registry and log files
 *.log
+tree.txt
+*.diff
 
 # Ignore VSCode configuration files
 .vscode/
